2 July 2021: Tom
	- Merge PR #491: Add SVCB and HTTPS types and handling according to draft-ietf-dnsop-svcb-https

2 July 2021: Wouter
	- Fix #506: Python Module Seems to Leak Memory if it Experiences an
	  Unhandled Exception.

25 June 2021: Wouter
	- Fix up permissions on rpl data file in tests.
	- Fix testbound newline treatment in moment_read and tempfile write.
	- Fix configure grep for reuseport default for failure.
	- Fix compat ctime_r return value
	- Fix configure does not require pkg-config if not needed.
	- Fix unit test in the ctime_r calls for autotrust and in testbound.
	- Fix auth zone download on windows to unlink before rename.

24 June 2021: Wouter
	- Add analyzer and port compile github workflow.

23 June 2021: Wouter
	- Fix #503: DNS over HTTPS response truncated.
	- Fix warnings reported by the gcc analyzer.

21 June 2021: George
	- Fix #495: Documentation or implementation of "verbosity" option.

18 June 2021: Wouter
	- Fix a number of warnings reported by the gcc analyzer.

15 June 2021: George
	- Merge #440 by kimheino: Various fixes to contrib/unbound_munin_ file.

14 June 2021: Wouter
	- Fix configure nonblocking test and onmingw test to use host.

10 June 2021: Wouter
	- Fix #500: SPEC file in version 1.13.1 references version 1.4;
	  unable to build RPM from source.
	- Fix contrib/unbound.spec, fixed url and comment.

9 June 2021: George
	- Merge #486 by fobster: Make VAL_MAX_RESTART_COUNT configurable.
	- Generated lexer and parser for #486; updated example.conf.
	- Fix #413 (based on patch by k-ronny): unbound: does not compile
	  on macOS 11.1-x86_64 host.
	- Use host_os instead of target_os in configure for Darwin8 build.

8 June 2021: George
	- Fix unused variable warning when compiling with --enable-dnstap.

7 June 2021: George
	- Merge #448 from shoeper: Update unbound-control.8.in, fix
	  rpz_disable typo.
	- Fix #425: Document auth-zone supports communication with DNS
	  primary on nondefault port.

1 June 2021: George